--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@discordjs/rest": "^2.4.2",
+    "discord-api-types": "^0.37.117",
+    "discord-interactions": "^4.1.0",
     "hono": "^4.6.18"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250109.0",
+    "@types/node": "^22.10.10",
     "wrangler": "^3.101.0"
   }
 }
